[SYNCOPE-1799] Spring Data JPA drives the persistence layer (#594)