@@ -26,7 +26,6 @@ import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.apache.commons.lang3.ArrayUtils;
@@ -49,7 +48,6 @@ import org.apache.syncope.core.persistence.api.dao.search.AttrCond;
 import org.apache.syncope.core.persistence.api.dao.search.DynRealmCond;
 import org.apache.syncope.core.persistence.api.dao.search.MemberCond;
 import org.apache.syncope.core.persistence.api.dao.search.MembershipCond;
-import org.apache.syncope.core.persistence.api.dao.search.OrderByClause;
 import org.apache.syncope.core.persistence.api.dao.search.RelationshipCond;
 import org.apache.syncope.core.persistence.api.dao.search.SearchCond;
 import org.apache.syncope.core.persistence.api.entity.Any;
@@ -60,9 +58,16 @@ import org.apache.syncope.core.persistence.api.entity.PlainAttrValue;
 import org.apache.syncope.core.persistence.api.entity.PlainSchema;
 import org.apache.syncope.core.persistence.api.entity.Realm;
 import org.apache.syncope.core.persistence.api.entity.anyobject.AnyObject;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.util.CollectionUtils;
 
-public abstract class AbstractAnySearchDAO extends AbstractDAO<Any<?>> implements AnySearchDAO {
+public abstract class AbstractAnySearchDAO implements AnySearchDAO {
+
+    protected static final Logger LOG = LoggerFactory.getLogger(AnySearchDAO.class);
 
     private static final String[] ORDER_BY_NOT_ALLOWED = {
         "serialVersionUID", "password", "securityQuestion", "securityAnswer", "token", "tokenExpireTime"
@@ -83,7 +88,7 @@ public abstract class AbstractAnySearchDAO extends AbstractDAO<Any<?>> implement
             DynRealmCond dynRealmCond = new DynRealmCond();
             dynRealmCond.setDynRealm(key);
             return SearchCond.getLeaf(dynRealmCond);
-        }).collect(Collectors.toList());
+        }).toList();
         if (!dynRealmConds.isEmpty()) {
             result.add(SearchCond.getOr(dynRealmConds));
         }
@@ -101,7 +106,7 @@ public abstract class AbstractAnySearchDAO extends AbstractDAO<Any<?>> implement
                 asc = membershipCond;
             }
             return SearchCond.getLeaf(asc);
-        }).collect(Collectors.toList());
+        }).toList();
         if (!groupOwnerConds.isEmpty()) {
             result.add(SearchCond.getOr(groupOwnerConds));
         }
@@ -181,9 +186,15 @@ public abstract class AbstractAnySearchDAO extends AbstractDAO<Any<?>> implement
 
     @Override
     public <T extends Any<?>> List<T> search(
-            final SearchCond cond, final List<OrderByClause> orderBy, final AnyTypeKind kind) {
+            final SearchCond cond, final List<Sort.Order> orderBy, final AnyTypeKind kind) {
 
-        return search(realmDAO.getRoot(), true, SyncopeConstants.FULL_ADMIN_REALMS, cond, -1, -1, orderBy, kind);
+        return search(
+                realmDAO.getRoot(),
+                true,
+                SyncopeConstants.FULL_ADMIN_REALMS,
+                cond,
+                Pageable.unpaged(Sort.by(orderBy)),
+                kind);
     }
 
     protected abstract <T extends Any<?>> List<T> doSearch(
@@ -191,18 +202,14 @@ public abstract class AbstractAnySearchDAO extends AbstractDAO<Any<?>> implement
             boolean recursive,
             Set<String> adminRealms,
             SearchCond searchCondition,
-            int page,
-            int itemsPerPage,
-            List<OrderByClause> orderBy,
+            Pageable pageable,
             AnyTypeKind kind);
 
     protected Pair<PlainSchema, PlainAttrValue> check(final AttrCond cond, final AnyTypeKind kind) {
         AnyUtils anyUtils = anyUtilsFactory.getInstance(kind);
 
-        PlainSchema schema = plainSchemaDAO.find(cond.getSchema());
-        if (schema == null) {
-            throw new IllegalArgumentException("Invalid schema " + cond.getSchema());
-        }
+        PlainSchema schema = plainSchemaDAO.findById(cond.getSchema()).
+                orElseThrow(() -> new IllegalArgumentException("Invalid schema " + cond.getSchema()));
 
         PlainAttrValue attrValue = schema.isUniqueConstraint()
                 ? anyUtils.newPlainAttrUniqueValue()
@@ -288,8 +295,8 @@ public abstract class AbstractAnySearchDAO extends AbstractDAO<Any<?>> implement
         List<String> groups = SyncopeConstants.UUID_PATTERN.matcher(cond.getGroup()).matches()
                 ? List.of(cond.getGroup())
                 : cond.getGroup().indexOf('%') == -1
-                ? Optional.ofNullable(groupDAO.findKey(cond.getGroup())).map(List::of).orElseGet(List::of)
-                : groupDAO.findKeysByNamePattern(cond.getGroup());
+                ? groupDAO.findKey(cond.getGroup()).map(List::of).orElseGet(List::of)
+                : groupDAO.findKeysByNamePattern(cond.getGroup().toLowerCase());
 
         if (groups.isEmpty()) {
             throw new IllegalArgumentException("Could not find group(s) for " + cond.getGroup());
@@ -318,7 +325,7 @@ public abstract class AbstractAnySearchDAO extends AbstractDAO<Any<?>> implement
                 ? Set.of()
                 : SyncopeConstants.UUID_PATTERN.matcher(cond.getMember()).matches()
                 ? Set.of(cond.getMember())
-                : Optional.ofNullable(userDAO.findKey(cond.getMember())).map(Set::of).
+                : userDAO.findKey(cond.getMember()).map(Set::of).
                         orElseGet(() -> anyObjectDAO.findByName(cond.getMember()).stream().
                         map(AnyObject::getKey).collect(Collectors.toSet()));
 
@@ -333,11 +340,11 @@ public abstract class AbstractAnySearchDAO extends AbstractDAO<Any<?>> implement
     protected <T extends Any<?>> List<T> buildResult(final List<Object> raw, final AnyTypeKind kind) {
         List<String> keys = raw.stream().
                 map(key -> key instanceof Object[] ? (String) ((Object[]) key)[0] : ((String) key)).
-                collect(Collectors.toList());
+                toList();
 
         // sort anys according to keys' sorting, as their ordering is same as raw, e.g. the actual sql query results
         List<Any<?>> anys = anyUtilsFactory.getInstance(kind).dao().findByKeys(keys).stream().
-                sorted(Comparator.comparing(any -> keys.indexOf(any.getKey()))).collect(Collectors.toList());
+                sorted(Comparator.comparing(any -> keys.indexOf(any.getKey()))).toList();
 
         keys.stream().filter(key -> !anys.stream().anyMatch(any -> key.equals(any.getKey()))).
                 forEach(key -> LOG.error("Could not find {} with id {}, even if returned by native query", kind, key));
@@ -351,9 +358,7 @@ public abstract class AbstractAnySearchDAO extends AbstractDAO<Any<?>> implement
             final boolean recursive,
             final Set<String> adminRealms,
             final SearchCond cond,
-            final int page,
-            final int itemsPerPage,
-            final List<OrderByClause> orderBy,
+            final Pageable pageable,
             final AnyTypeKind kind) {
 
         if (CollectionUtils.isEmpty(adminRealms)) {
@@ -367,18 +372,24 @@ public abstract class AbstractAnySearchDAO extends AbstractDAO<Any<?>> implement
             return List.of();
         }
 
-        List<OrderByClause> effectiveOrderBy;
-        if (orderBy.isEmpty()) {
-            OrderByClause keyClause = new OrderByClause();
-            keyClause.setField(kind == AnyTypeKind.USER ? "username" : "name");
-            keyClause.setDirection(OrderByClause.Direction.ASC);
-            effectiveOrderBy = List.of(keyClause);
+        List<Sort.Order> effectiveOrderBy;
+        if (pageable.getSort().isEmpty()) {
+            effectiveOrderBy = List.of(
+                    new Sort.Order(Sort.Direction.ASC, kind == AnyTypeKind.USER ? "username" : "name"));
         } else {
-            effectiveOrderBy = orderBy.stream().
-                    filter(clause -> !ArrayUtils.contains(ORDER_BY_NOT_ALLOWED, clause.getField())).
-                    collect(Collectors.toList());
+            effectiveOrderBy = pageable.getSort().stream().
+                    filter(clause -> !ArrayUtils.contains(ORDER_BY_NOT_ALLOWED, clause.getProperty())).
+                    toList();
         }
 
-        return doSearch(base, recursive, adminRealms, cond, page, itemsPerPage, effectiveOrderBy, kind);
+        return doSearch(
+                base,
+                recursive,
+                adminRealms,
+                cond,
+                pageable.isUnpaged()
+                ? Pageable.unpaged(Sort.by(effectiveOrderBy))
+                : PageRequest.of(pageable.getPageNumber(), pageable.getPageSize(), Sort.by(effectiveOrderBy)),
+                kind);
     }
 }
