@@ -22,7 +22,6 @@ import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
@@ -81,6 +80,7 @@ import org.identityconnectors.framework.common.objects.filter.FilterBuilder;
 import org.identityconnectors.framework.spi.SearchResultsHandler;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.Pageable;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
 
@@ -148,7 +148,8 @@ public class InboundMatcher {
 
         Stream<Item> mapItems = Stream.concat(
                 provision.get().getMapping().getItems().stream(),
-                virSchemaDAO.find(resource.getKey(), anyType.getKey()).stream().map(VirSchema::asLinkingMappingItem));
+                virSchemaDAO.findByResourceAndAnyType(resource.getKey(), anyType.getKey()).stream().
+                        map(VirSchema::asLinkingMappingItem));
 
         List<ConnectorObject> found = new ArrayList<>();
 
@@ -216,8 +217,9 @@ public class InboundMatcher {
 
     protected List<Implementation> getTransformers(final Item item) {
         return item.getTransformers().stream().
-                map(implementationDAO::find).
-                filter(Objects::nonNull).
+                map(implementationDAO::findById).
+                filter(Optional::isPresent).
+                map(Optional::get).
                 collect(Collectors.toList());
     }
 
@@ -257,29 +259,28 @@ public class InboundMatcher {
 
         if (intAttrName.getField() != null) {
             switch (intAttrName.getField()) {
-                case "key":
-                    Optional.ofNullable(anyUtils.dao().find(finalConnObjectKeyValue)).ifPresent(anys::add);
-                    break;
+                case "key" ->
+                    anyUtils.dao().findById(finalConnObjectKeyValue).ifPresent(anys::add);
 
-                case "username":
+                case "username" -> {
                     if (anyTypeKind == AnyTypeKind.USER && ignoreCaseMatch) {
                         AnyCond cond = new AnyCond(AttrCond.Type.IEQ);
                         cond.setSchema("username");
                         cond.setExpression(finalConnObjectKeyValue);
                         anys.addAll(anySearchDAO.search(SearchCond.getLeaf(cond), AnyTypeKind.USER));
                     } else {
-                        Optional.ofNullable(userDAO.findByUsername(finalConnObjectKeyValue)).ifPresent(anys::add);
+                        userDAO.findByUsername(finalConnObjectKeyValue).ifPresent(anys::add);
                     }
-                    break;
+                }
 
-                case "name":
+                case "name" -> {
                     if (anyTypeKind == AnyTypeKind.GROUP && ignoreCaseMatch) {
                         AnyCond cond = new AnyCond(AttrCond.Type.IEQ);
                         cond.setSchema("name");
                         cond.setExpression(finalConnObjectKeyValue);
                         anys.addAll(anySearchDAO.search(SearchCond.getLeaf(cond), AnyTypeKind.GROUP));
                     } else {
-                        Optional.ofNullable(groupDAO.findByName(finalConnObjectKeyValue)).ifPresent(anys::add);
+                        groupDAO.findByName(finalConnObjectKeyValue).ifPresent(anys::add);
                     }
 
                     if (anyTypeKind == AnyTypeKind.ANY_OBJECT && ignoreCaseMatch) {
@@ -290,13 +291,14 @@ public class InboundMatcher {
                     } else {
                         anys.addAll(anyObjectDAO.findByName(finalConnObjectKeyValue));
                     }
-                    break;
+                }
 
-                default:
+                default -> {
+                }
             }
         } else if (intAttrName.getSchemaType() != null) {
             switch (intAttrName.getSchemaType()) {
-                case PLAIN:
+                case PLAIN -> {
                     PlainAttrValue value = intAttrName.getSchema().isUniqueConstraint()
                             ? anyUtils.newPlainAttrUniqueValue()
                             : anyUtils.newPlainAttrValue();
@@ -315,20 +317,20 @@ public class InboundMatcher {
                         anys.addAll(anyUtils.dao().findByPlainAttrValue((PlainSchema) intAttrName.getSchema(),
                                 value, ignoreCaseMatch));
                     }
-                    break;
+                }
 
-                case DERIVED:
+                case DERIVED ->
                     anys.addAll(anyUtils.dao().findByDerAttrValue((DerSchema) intAttrName.getSchema(),
                             finalConnObjectKeyValue, ignoreCaseMatch));
-                    break;
 
-                default:
+                default -> {
+                }
             }
         }
 
         List<PullMatch> result = anys.stream().
                 map(any -> new PullMatch(MatchType.ANY, any)).
-                collect(Collectors.toList());
+                toList();
 
         if (resource != null) {
             userDAO.findLinkedAccount(resource, finalConnObjectKeyValue).
@@ -350,7 +352,7 @@ public class InboundMatcher {
         try {
             result.addAll(anySearchDAO.search(rule.getSearchCond(syncDelta, provision), type).stream().
                     map(any -> rule.matching(any, syncDelta, provision)).
-                    collect(Collectors.toList()));
+                    toList());
         } catch (Throwable t) {
             LOG.error("While searching via {}", rule.getClass().getName(), t);
         }
@@ -478,31 +480,26 @@ public class InboundMatcher {
 
         List<Realm> result = new ArrayList<>();
 
-        Realm realm;
         switch (connObjectKeyItem.get().getIntAttrName()) {
-            case "key":
-                realm = realmDAO.find(connObjectKey);
-                if (realm != null) {
-                    result.add(realm);
-                }
-                break;
+            case "key" -> {
+                realmDAO.findById(connObjectKey).ifPresent(result::add);
+            }
 
-            case "name":
+            case "name" -> {
                 if (orgUnit.isIgnoreCaseMatch()) {
-                    result.addAll(realmDAO.findDescendants(SyncopeConstants.ROOT_REALM, connObjectKey, -1, -1));
+                    result.addAll(
+                            realmDAO.findDescendants(SyncopeConstants.ROOT_REALM, connObjectKey, Pageable.unpaged()));
                 } else {
-                    result.addAll(realmDAO.findByName(connObjectKey).stream().collect(Collectors.toList()));
+                    result.addAll(realmDAO.findByName(connObjectKey).stream().toList());
                 }
-                break;
+            }
 
-            case "fullpath":
-                realm = realmDAO.findByFullPath(connObjectKey);
-                if (realm != null) {
-                    result.add(realm);
-                }
-                break;
+            case "fullpath" -> {
+                realmDAO.findByFullPath(connObjectKey).ifPresent(result::add);
+            }
 
-            default:
+            default -> {
+            }
         }
 
         return result;
