@@ -20,7 +20,6 @@ package org.apache.syncope.core.provisioning.java.data;
 
 import java.text.ParseException;
 import java.util.Base64;
-import java.util.stream.Collectors;
 import org.apache.syncope.common.lib.SyncopeClientCompositeException;
 import org.apache.syncope.common.lib.SyncopeClientException;
 import org.apache.syncope.common.lib.to.Item;
@@ -125,13 +124,10 @@ public class SAML2SP4UIIdPDataBinderImpl implements SAML2SP4UIIdPDataBinder {
                     item.setPurpose(MappingPurpose.NONE);
 
                     itemTO.getTransformers().forEach(transformerKey -> {
-                        Implementation transformer = implementationDAO.find(transformerKey);
-                        if (transformer == null) {
-                            LOG.debug("Invalid " + Implementation.class.getSimpleName() + " {}, ignoring...",
-                                    transformerKey);
-                        } else {
-                            item.getTransformers().add(transformer.getKey());
-                        }
+                        implementationDAO.findById(transformerKey).ifPresentOrElse(
+                                transformer -> item.getTransformers().add(transformer.getKey()),
+                                () -> LOG.debug("Invalid {} {}, ignoring...",
+                                        Implementation.class.getSimpleName(), transformerKey));
                         // remove all implementations not contained in the TO
                         item.getTransformers().
                                 removeIf(implementation -> !itemTO.getTransformers().contains(implementation));
@@ -177,13 +173,10 @@ public class SAML2SP4UIIdPDataBinderImpl implements SAML2SP4UIIdPDataBinder {
         if (idpTO.getRequestedAuthnContextProvider() == null) {
             idp.setRequestedAuthnContextProvider(null);
         } else {
-            Implementation implementation = implementationDAO.find(idpTO.getRequestedAuthnContextProvider());
-            if (implementation == null) {
-                LOG.debug("Invalid " + Implementation.class.getSimpleName() + " {}, ignoring...",
-                        idpTO.getRequestedAuthnContextProvider());
-            } else {
-                idp.setRequestedAuthnContextProvider(implementation);
-            }
+            implementationDAO.findById(idpTO.getRequestedAuthnContextProvider()).ifPresentOrElse(
+                    idp::setRequestedAuthnContextProvider,
+                    () -> LOG.debug("Invalid {} {}, ignoring...",
+                            Implementation.class.getSimpleName(), idpTO.getRequestedAuthnContextProvider()));
         }
 
         if (idpTO.getUserTemplate() == null) {
@@ -192,7 +185,7 @@ public class SAML2SP4UIIdPDataBinderImpl implements SAML2SP4UIIdPDataBinder {
             SAML2SP4UIUserTemplate userTemplate = idp.getUserTemplate();
             if (userTemplate == null) {
                 userTemplate = entityFactory.newEntity(SAML2SP4UIUserTemplate.class);
-                userTemplate.setAnyType(anyTypeDAO.findUser());
+                userTemplate.setAnyType(anyTypeDAO.getUser());
                 userTemplate.setIdP(idp);
                 idp.setUserTemplate(userTemplate);
             }
@@ -202,14 +195,9 @@ public class SAML2SP4UIIdPDataBinderImpl implements SAML2SP4UIIdPDataBinder {
         idp.getItems().clear();
         populateItems(idpTO, idp);
 
-        idpTO.getActions().forEach(action -> {
-            Implementation implementation = implementationDAO.find(action);
-            if (implementation == null) {
-                LOG.debug("Invalid " + Implementation.class.getSimpleName() + " {}, ignoring...", action);
-            } else {
-                idp.add(implementation);
-            }
-        });
+        idpTO.getActions().forEach(action -> implementationDAO.findById(action).ifPresentOrElse(
+                idp::add,
+                () -> LOG.debug("Invalid {} {}, ignoring...", Implementation.class.getSimpleName(), action)));
         // remove all implementations not contained in the TO
         idp.getActions().removeIf(impl -> !idpTO.getActions().contains(impl.getKey()));
 
@@ -261,7 +249,7 @@ public class SAML2SP4UIIdPDataBinderImpl implements SAML2SP4UIIdPDataBinder {
 
         populateItems(idp, idpTO);
 
-        idpTO.getActions().addAll(idp.getActions().stream().map(Entity::getKey).collect(Collectors.toList()));
+        idpTO.getActions().addAll(idp.getActions().stream().map(Entity::getKey).toList());
 
         return idpTO;
     }
